--- a/trunk/tasma/tasma/applnk/desktop/tasmaicons.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmaicons.desktop
@@ -16,6 +16,7 @@ Name[nl]=Pictogrammen
 Name[es]=Íconos
 Name[de]=Symbole
 Name[pt-BR]=Ícones
+Name[fr]=Icônes
 
 Comment=Customize KDE Icons
 Comment[tr]=KDE Simgelerini Özelleştirir
