--- a/trunk/tasma/tasma/applnk/desktop/tasmakcmaccess.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmakcmaccess.desktop
@@ -24,7 +24,7 @@ Comment[nl]=Verbeterde toegankelijkheid voor gebruikers met een handicap
 Comment[es]=Mejora acceso para personas con disapacidades
 Comment[de]=Zugänglichkeit für Personen mit Behinderungen verbessern
 Comment[pt_BR]=Melhorar acessibilidade para pessoas com deficiência
-Comment[fr]=Améliorer l'accéssibilités pour les personnes handicapées
+Comment[fr]=Améliorer l'accessibilité pour les personnes handicapées
 
 Keywords=access,accessibility,deaf,impaired,bell,audible bell,visible bell,Keyboard,keys,sticky keys,bounce keys,slow keys,mouse navigation,num pad
 Keywords[tr]=erişim,erişilebilirlik,sağır,özürlü,zil,duyulabilir zil,görünür zil,Klavye,tuşlar,yapışkan tuşlar,zıplayan tuşlar,yavaş tuşlar,fare yönlendirmesi,num pad
