--- a/trunk/tasma/tasma/applnk/desktop/tasmamouse.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmamouse.desktop
@@ -17,6 +17,7 @@ Name[nl]=Muis
 Name[es]=Ratón
 Name[de]=Maus
 Name[pt_BR]=Mouse
+Name[fr]=Souris
 
 Comment=Mouse settings
 Comment[tr]=Fare ayarları
@@ -24,6 +25,7 @@ Comment[nl]=Muisinstellingen
 Comment[es]=Configuración de Ratón
 Comment[de]=Mauseinstellungen
 Comment[pt_BR]=Configurações do mouse
+Comment[fr]=Configuration de la souris
 
 Keywords=Mouse,Mouse acceleration,Mouse threshold,Mouse buttons,Selection,Cursor Shape,Input Devices,Button Mapping,Click,icons,feedback,Pointers,Drag,DoubleClick,mapping,right handed,left handed
 Keywords[tr]=fare,Fare Hızlandırma,Fare eşiği,Fare Tuşları,Seçim,imleç şekli,girdi aygıtları,Tuş Haritası,Tıklama,simgeler,geri besleme,İşaretçiler,Taşı,Çift Tıkla,haritalama,sağ elli,sol elli
@@ -31,5 +33,6 @@ Keywords[nl]=muis,muissnelheid,muisknoppen,selectie,cursor-uiterlijk,input devic
 Keywords[es]=Ratón,aceleración de ratón,Mouse threshold,botones de ratón,Selección,Forma de cursor,Dispositivo de entrada,Mapo de botones,Clic,iconos,retroalimentación,Punteros,Drag,DobleClic,mapeo,diestro,zurdo
 Keywords[de]=Maus,Mausbeschleinigung,Mausschwelle,Maustasten,Auswahl,Cursorform,Eingabegeräte,Tasten-Abbild,Klick,icons,Feedback,Zeiger,Zerren,Doppelklick,Abbild,rechtshändig,linkshändig
 Keywords[pt_BR]=Mouse,Aceleração do mouse,Limiar do mouse,Botões do mouse,Seleção,Forma do Cursos,Dispositivos de Entrada,Mapeamento dos botões,Clique,ícones,retorno,Ponteiros,Arrastar,Clique duplo,mapeamento,destro,canhoto
+Keywords[fr]=Souris,Accélération de la souris,Seuil de souris,Boutons de souris,sélection,Forme du Curseur,Périphérique d'entrée,Association de boutton,Clic,icônes,retour,Pointeurs,Déplacer,Double Clic,association,droitier,gaucher
 
 Categories=Qt;KDE;X-KDE-settings-peripherals;X-KDE-tasma-peripherals
