--- a/trunk/tasma/tasma/applnk/desktop/tasmaproxy.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmaproxy.desktop
@@ -15,6 +15,7 @@ Name[tr]=Vekil Sunucu
 Name[es]=Proxy
 Name[de]=Proxy
 Name[pt_BR]=Proxy
+Name[fr]=Proxy
 
 Comment=Configure the proxy servers used
 Comment[tr]=Vekil sunucularını yapılandırır
@@ -22,6 +23,7 @@ Comment[nl]=Hier kunt u de Proxy-servers instellen
 Comment[es]=Configuración del servidor proxy
 Comment[de]=Proxy-Server konfigurieren
 Comment[pt_BR]=Configurar os servidores proxy utilizados
+Comment[fr]=Configuration des serveurs proxy utilisés
 
 Keywords=Proxy,Proxy server,Firewall,Squid,proxy
 Keywords[tr]=Vekil,Vekil sunucu,Güvenlik duvarı,Squid,proxy
@@ -29,5 +31,6 @@ Keywords[nl]=proxy,proxy server,firewall,squid
 Keywords[es]=proxy,servidor proxy server,firewall,cortafuegos,squid
 Keywords[de]=Proxy,Proxy-Server,Firewall,Squid,Proxy
 Keywords[pt_BR]=Proxy,Servidor proxy,Firewall,Squid,proxy
+Keywords[fr]=Proxy,Serveur proxy,Pare-feu,Squid,proxy
 
 Categories=Qt;KDE;X-KDE-settings-network;X-KDE-tasma-network
