--- a/trunk/tasma/tasma/applnk/desktop/tasmastyle.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmastyle.desktop
@@ -17,6 +17,7 @@ Name[nl]=Stijl
 Name[es]=Estilo
 Name[de]=Stil
 Name[pt_BR]=Estilo
+Name[fr]=Style
 
 Comment=Allows the manipulation of widget behavior and changing the Style for KDE
 Comment[tr]=KDE için Aletlerin davranışlarını ve stili değiştirmeyi sağlar
@@ -24,6 +25,7 @@ Comment[nl]=Hiermee kunt u het gedrag van de widgets aanpassen en de stijl van K
 Comment[es]=Permite la manipulación del comportamiento de los widgets y cambio de estilos KDE
 Comment[de]=Erlaubt die Manipulation der Widget-Verhaltensweise und die Änderung des Stils für KDE
 Comment[pt_BR]=Permite a manipulação do comportamento dos widgets e a mudança do Estilo do KDE
+Comment[fr]=Permet la manipulation du comportement des widgets et le Style de KDE
 
 Keywords=style,styles,look,widget,icons,toolbars,text,highlight,apps,KDE applications
 Keywords[tr]=simgeler,stil,stiller,dekor,dekorlar,tema,temalar,görünüm,parçacık,menü,KDE uygulamaları,araç çubukları,uygulamalar
@@ -31,5 +33,6 @@ Keywords[nl]=stijl,stijlen,look,uiterlijk,widget,icons,iconen,pictogrammen,werkb
 Keywords[es]=estilo,estilos,apariencia,widget,iconos,barras de herramientas,texto,highlight,apps,aplicaciones KDE
 Keywords[de]=Stil,Stile,Aussehen,Icons,Toolbars,Symbolleisten,Text,Highlight,Markierung,Applikationen,KDE Applikationen
 Keywords[pt_BR]=estilo,estilos,aparência,widget,ícones,barras de ferramentas,texto,highlight,aplicações,aplicações KDE
+Keywords[fr]=style,styles,visuel,widget,icônes,barre des tâches,texte,highlight,applications,applications KDE
 
 Categories=Qt;KDE;X-KDE-settings-looknfeel;X-KDE-tasma-looknfeel
