--- a/trunk/tasma/package-manager/src/packagemanager.desktop
+++ b/trunk/tasma/package-manager/src/packagemanager.desktop
@@ -5,10 +5,12 @@ Name[es]=Administrador de Paquetes
 Name[nl]=Toevoegen of verwijderen software
 Name[de]=Paket-Manager
 Name[pt_BR]=Gerenciador de Pacotes
+Name[fr]=Gestionnaire de Paquets
 GenericName[en]=Add or Remove Software
 GenericName[tr]=Yazılım ekle ve kaldır
 GenericName[de]=Anwendung hinzufügen oder entfernen
 GenericName[pt_BR]=Adicionar ou Remover Software
+GenericName[fr]=Ajouter ou Supprimer un Logiciel
 Comment=PiSi Package Manager Graphical User Interface
 Comment[en]=PiSi Package Manager Graphical User Interface
 Comment[tr]=PiSi Paket Yöneticisi Kullanıcı Grafik Arayüzü
@@ -16,6 +18,7 @@ Comment[nl]=PiSi Pakkermanager grafische gebruikersinterface
 Comment[es]=Interfaz gráfico de Administrador de Paquetes PiSi
 Comment[de]=PiSi Paket-Manager grafische Benutzeroberfläche
 Comment[pt_BR]=Interface Gráfica do Usuário do Gerenciador de Pacotes PiSi
+Comment[fr]=Interface Graphique du Gestionnaire de Paquet PiSi
 Icon=package-manager
 Type=Application
 Exec=package-manager
