--- a/trunk/tasma/package-manager/src/tasmamanager.desktop
+++ b/trunk/tasma/package-manager/src/tasmamanager.desktop
@@ -6,6 +6,7 @@ Name[nl]=Toevoegen, bijwerken of verwijderen programma's
 Name[es]=Agregar, Actualizar o Remover Programas
 Name[de]=Programme hinzufügen, aktualisieren oder entfernen
 Name[pt_BR]=Adicionar, Atualizar ou Remover Programas
+Name[fr]=Ajout, Mise à jour ou Suppression de Programmes
 Comment=PiSi Package Manager Graphical User Interface
 Comment[en]=PiSi Package Manager Graphical User Interface
 Comment[tr]=PiSi Paket Yöneticisi Kullanıcı Grafik Arayüzü
@@ -13,6 +14,7 @@ Comment[nl]=PiSi pakketmanager grafische gebruikersinterface
 Comment[es]=Interfaz gráfico de Administrador de Paquetes PiSi
 Comment[de]=PiSi Paket-Manager grafische Benutzoberfläche
 Comment[pt_BR]=Interface Gráfica do Usuário do Gerenciador de Pacotes PiSi
+Comment[fr]=Interface Graphique du Gestionnaire de Paquets PiSi
 Icon=package-manager
 Type=Application
 X-Tasma-Fork=true
