--- a/trunk/tasma/package-manager/src/x-pisi.desktop
+++ b/trunk/tasma/package-manager/src/x-pisi.desktop
@@ -7,6 +7,7 @@ Comment[nl]=PiSi bestand
 Comment[es]=Archivo PiSi
 Comment[de]=PiSi Datei
 Comment[pt_BR]=Arquivo PiSi
+Comment[fr]=Fichier PiSi
 MimeType=application/x-pisi
 Patterns=*.pisi
 Type=MimeType
