--- a/tasma/network-manager/network-applet.desktop
+++ b/tasma/network-manager/network-applet.desktop
@@ -2,6 +2,7 @@
 Name=Network Applet
 Name[tr]=Ağ Programcığı
 Name[de]=Netzwerk Applet
+Name[fr]=Applet Réseau
 Icon=network
 Type=Application
 Exec=network-applet
