--- a/trunk/tasma/network-manager/network-manager.desktop
+++ b/trunk/tasma/network-manager/network-manager.desktop
@@ -4,6 +4,7 @@ Name[tr]=Ağ Yöneticisi
 Name[es]=Configuración de Red
 Name[de]=Netzwerk-Manager
 Name[pt_BR]=Gerenciador de Rede
+Name[fr]=Gestionnaire Réseau
 Icon=network
 X-KDE-ModuleType=Library
 X-KDE-Library=network-manager
