--- a/trunk/artwork/wallpapers/prds_gokyz01.jpg.desktop
+++ b/trunk/artwork/wallpapers/prds_gokyz01.jpg.desktop
@@ -3,5 +3,6 @@ Encoding=UTF-8
 File=prds_gokyz01.jpg
 Name=Pardus Sky [Gray]
 Name[tr]=Pardus Gökyüzü [Gri]
+Name[pt_BR]=Céu Pardus [Cinza]
 ImageType=pixmap
 Author=Umut
