--- a/trunk/artwork/wallpapers/prds_gokyz02.jpg.desktop
+++ b/trunk/artwork/wallpapers/prds_gokyz02.jpg.desktop
@@ -3,5 +3,6 @@ Encoding=UTF-8
 File=prds_gokyz02.jpg
 Name=Pardus Sky [Blue]
 Name[tr]=Pardus Gökyüzü [Mavi]
+Name[pt_BR]=Céu Pardus [Azul]
 ImageType=pixmap
 Author=Umut
