--- a/trunk/artwork/wallpapers/prds_gokyz04.jpg.desktop
+++ b/trunk/artwork/wallpapers/prds_gokyz04.jpg.desktop
@@ -3,5 +3,6 @@ Encoding=UTF-8
 File=prds_gokyz04.jpg
 Name=Pardus Sky [Yellow]
 Name[tr]=Pardus Gökyüzü [Sarı]
+Name[pt_BR]=Céu Pardus [Amarelo]
 ImageType=pixmap
 Author=Umut
