--- a/trunk/artwork/wallpapers/prds_kus03.jpg.desktop
+++ b/trunk/artwork/wallpapers/prds_kus03.jpg.desktop
@@ -3,5 +3,6 @@ Encoding=UTF-8
 File=prds_kus03.jpg
 Name=Pardus Bird [Blue]
 Name[tr]=Pardus Kuş [Mavi]
+Name[pt_BR]=Pássaro Pardus [Azul]
 ImageType=pixmap
 Author=Umut
