--- a/trunk/artwork/wallpapers/prds_kus04.jpg.desktop
+++ b/trunk/artwork/wallpapers/prds_kus04.jpg.desktop
@@ -3,5 +3,6 @@ Encoding=UTF-8
 File=prds_kus04.jpg
 Name=Pardus Bird [BW]
 Name[tr]=Pardus Kuş [SB]
+Name[pt_BR]=Pássaro Pardus [Escala de Cinza]
 ImageType=pixmap
 Author=Umut
