--- a/trunk/artwork/wallpapers/tullwall03.jpg.desktop
+++ b/trunk/artwork/wallpapers/tullwall03.jpg.desktop
@@ -3,5 +3,6 @@ Encoding=UTF-8
 File=tullwall03.jpg
 Name=Tulliana Wallpaper [Red]
 Name[tr]=Tulliana Arkaplan [Kırmızı]
+Name[pt_BR]=Papel de Parede Tulliana [Vermelho]
 ImageType=pixmap
 Author=Umut
