--- a/trunk/artwork/wallpapers/tullwall04.jpg.desktop
+++ b/trunk/artwork/wallpapers/tullwall04.jpg.desktop
@@ -3,5 +3,6 @@ Encoding=UTF-8
 File=tullwall04.jpg
 Name=Tulliana Wallpaper [Green]
 Name[tr]=Tulliana Arkaplan [Yeşil]
+Name[pt_BR]=Papel de Parede Tulliana [Verde]
 ImageType=pixmap
 Author=Umut
