--- a/trunk/artwork/wallpapers/tullwall05.jpg.desktop
+++ b/trunk/artwork/wallpapers/tullwall05.jpg.desktop
@@ -3,5 +3,6 @@ Encoding=UTF-8
 File=tullwall05.jpg
 Name=Tulliana Wallpaper [Yellow]
 Name[tr]=Tulliana Arkaplan [Sarı]
+Name[pt_BR]=Papel de Parede Tulliana [Amarelo]
 ImageType=pixmap
 Author=Umut
