--- a/trunk/kbeddua/src/kbeddua.desktop
+++ b/trunk/kbeddua/src/kbeddua.desktop
@@ -3,6 +3,7 @@ Encoding=UTF-8
 Name=KBeddua
 Name[tr_TR]=KBeddua
 Name[de]=KBeddua
+Name[pt_BR]=KBeddua
 Exec=kbeddua
 Icon=kbeddua
 Type=Application
