--- a/trunk/knazar/src/knazar.desktop
+++ b/trunk/knazar/src/knazar.desktop
@@ -9,3 +9,4 @@ Type=Application
 Comment=Protects From Harmfull Looks!
 Comment[tr_TR]=Kem gözlerden korur!
 Comment[de]=Schützt vor bösen Blicken!
+Comment[pt_BR]=Protege contra mal olhados!
