--- a/trunk/tasma/display-config/display-config.desktop
+++ b/trunk/tasma/display-config/display-config.desktop
@@ -2,9 +2,11 @@
 Name=Configure Display
 Name[tr]=Görüntüyü Yapılandır
 Name[de]=Anzeige konfigurieren
+Name[pt_BR]=Configurar Monitor
 Comment=Display Configuration Interface
 Comment[tr]=Görüntü Ayarları Arayüzü
 Comment[de]=Anzeigekonfiguration-Schnittstelle
+Comment[pt_BR]=Interface de Configuração de Monitor
 Icon=display
 X-KDE-ModuleType=Library
 X-KDE-Library=display-config
