--- a/trunk/tasma/firewall-config/src/firewall-config.desktop
+++ b/trunk/tasma/firewall-config/src/firewall-config.desktop
@@ -2,13 +2,16 @@
 Name=Firewall Config
 Name[tr]=Güvenlik Duvarı Ayarları
 Name[de]=Firewallkonfiguration
+Name[pt_BR]=Configuração de Firewall
 GenericName=Firewall Configuration
 GenericName[en]=Firewall Configuration
 GenericName[tr]=Güvenlik Duvarı Ayarları
 GenericName[de]=Firewallkonfiguration
+GenericName[pt_BR]=Configuração de Firewall
 Comment=Firewall Configuration Interface
 Comment[tr]=Güvenlik Duvarı Ayarları
 Comment[de]=Firewallkonfiguration-Schnittstelle
+Comment[pt_BR]=Interface de Configuração de Firewall
 Icon=firewall_config
 X-KDE-ModuleType=Library
 X-KDE-Library=firewall-config
