--- a/trunk/tasma/manager-template/hede-manager.desktop
+++ b/trunk/tasma/manager-template/hede-manager.desktop
@@ -2,9 +2,11 @@
 Name=Hede Manager
 Name[tr]=Hede Yöneticisi
 Name[de]=Hede Manager
+Name[pt_BR]=Gerenciador do Hede
 GenericName=Sample Tasma Module
 GenericName[tr]=Örnek Tasma Modülü
 GenericName[de]=Muster Tasma-Modul
+GenericName[pt_BR]=Módulo Tasma de Amostra
 X-KDE-ModuleType=Library
 X-KDE-Library=hede-manager
 X-KDE-FactoryName=hede_manager
