--- a/trunk/tasma/network-manager/network-applet.desktop
+++ b/trunk/tasma/network-manager/network-applet.desktop
@@ -3,6 +3,7 @@ Name=Network Applet
 Name[tr]=Ağ Programcığı
 Name[de]=Netzwerk Applet
 Name[fr]=Applet Réseau
+Name[pt_BR]=Applet de Rede
 Icon=network
 Type=Application
 Exec=network-applet
