--- a/trunk/tasma/tasma/applnk/desktop/tasmaicons.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmaicons.desktop
@@ -15,7 +15,7 @@ Name[tr]=Simgeler
 Name[nl]=Pictogrammen
 Name[es]=Íconos
 Name[de]=Symbole
-Name[pt-BR]=Ícones
+Name[pt_BR]=Ícones
 Name[fr]=Icônes
 Name[it]=Icone
 
