--- a/trunk/tasma/tasma/src/kfile-plugins/pisi/kfile_pisi.desktop
+++ b/trunk/tasma/tasma/src/kfile-plugins/pisi/kfile_pisi.desktop
@@ -3,6 +3,7 @@ Encoding=UTF-8
 Type=Service
 Name=PiSi Package Info
 Name[tr]=PiSi Paketi Bilgisi
+Name[pt_BR]=Informação de Pacote PiSi
 ServiceTypes=KFilePlugin
 X-KDE-Library=kfile_pisi
 MimeType=application/x-pisi
