--- a/trunk/artwork/wallpapers/prds_kus02.jpg.desktop
+++ b/trunk/artwork/wallpapers/prds_kus02.jpg.desktop
@@ -3,6 +3,6 @@ Encoding=UTF-8
 File=prds_kus02.jpg
 Name=Pardus Bird [Yellow]
 Name[tr]=Pardus Kuş [Sarı]
-Name[pt_BR]=Pássarp Pardus [Amarelo]
+Name[pt_BR]=Pássaro Pardus [Amarelo]
 ImageType=pixmap
 Author=Umut
