--- a/trunk/kaptan/src/kaptan.desktop
+++ b/trunk/kaptan/src/kaptan.desktop
@@ -10,5 +10,6 @@ X-KDE-autostart-condition=kaptanrc:General:RunOnStart:true
 
 Name=Kaptan Desktop
 Name[tr]=Kaptan Masaüstü
+Name[pt_BR]=Kaptan Desktop
 
 Categories=Qt;KDE;Core
